# ellar-form

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-tests.txt
.github/workflows/: publish.yml  test.yml  test_full.yml
tests/: conftest.py  mocks.py  test_boolean_field.py  test_choice_field.py  test_enum_field.py  test_file_field.py  test_form_manager.py  test_numbers_field.py  test_string_form_fields.py  test_zform_field_list.py  test_zform_obj_field.py  test_zform_schema.py
zform/: __init__.py  constants.py  form.py
zform/fields/: __init__.py  base.py  boolean.py  dates.py  enum.py  files.py  flist.py  label.py  numbers.py  obj.py  select.py  string.py  widget.py
zform/fields/utils/: __init__.py
zform/params/: decorators.py  field_infos.py  resolver_gen.py  resolvers.py
